--- a/src/AspNetCore.Rendertron/AspNetCore.Rendertron.csproj
+++ b/src/AspNetCore.Rendertron/AspNetCore.Rendertron.csproj
@@ -1,33 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.2</Version>
-    <AssemblyVersion>0.0.2.0</AssemblyVersion>
-    <FileVersion>0.0.2.0</FileVersion>
-    <Description>ASP.net core middleware for GoogleChrome Rendertron.</Description>
-    <Copyright>Ievgen Galamai</Copyright>
-    <PackageId>Galamai.AspNetCore.Rendertron</PackageId>
-    <PackageLicenseUrl>https://github.com/galamai/AspNetCore.Rendertron/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/galamai/AspNetCore.Rendertron</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/galamai/AspNetCore.Rendertron</RepositoryUrl>
-    <PackageTags>asp.net core, rendertron</PackageTags>
-    <Authors>Ievgen Galamai</Authors>
-    <Company>Ievgen Galamai</Company>
-    <NeutralLanguage />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.Extensions.Caching.Abstractions">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.caching.abstractions\2.0.0\lib\netstandard2.0\Microsoft.Extensions.Caching.Abstractions.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
